--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,11 +21,7 @@
         <p class="view"><a href="https://github.com/labtrac/test-documentation">View the Project on GitHub <small>labtrac/test-documentation</small></a></p>
 
 
-        <ul>
-          <li><a href="https://github.com/labtrac/test-documentation/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/labtrac/test-documentation/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/labtrac/test-documentation">View On <strong>GitHub</strong></a></li>
-        </ul>
+      {% include menu.html %}
       </header>
      <section>
      {{ content }}
