--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,9 +1,7 @@
-<nav class="nav-primary" role="navigation" >
-    <ul>
+    <ul class="nav navbar-nav pull-right">
         {% for p in site.pages %}
         <li>
         	<a {% if p.url == page.url %}class="active"{% endif %} href="{{ site.baseurl }}{{ p.url }}">{{ p.title }}</a>
         </li>
         {% endfor %}
     </ul>
-</nav>
