--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,39 +3,55 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>{{ page.title }}</title>
+   
     {% if page.markdownpage == true %}
-     <link rel="stylesheet" href="../stylesheets/styles.css">
-    <link rel="stylesheet" href="../stylesheets/github-light.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="../stylesheets/stylesheet.css">
     {% else %}
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
-    <meta name="viewport" content="width=device-width">
-    {% endif %}
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+     {% endif %}
+     <link rel="stylesheet" type="text/css" media="screen" href="https://www.labtrac.com/content/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="https://www.labtrac.com/content/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="https://www.labtrac.com/content/styles.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="https://www.labtrac.com/content/spacing.css">
+
+    <title>{{page.title}}</title>
+  </head>
   </head>
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>Test-documentation</h1>
-        <p>Test Run of Documentation Site</p>
-
-        <p class="view"><a href="https://github.com/labtrac/test-documentation">View the Project on GitHub <small>labtrac/test-documentation</small></a></p>
-
-
-      {% include menu.html %}
-      </header>
-     <section>
+     <header class="navbar navbar-inverse navbar-fixed-top hidden-print" role="navigation">
+      <div class="" style="margin-left:4%;margin-right:4%;">
+        <div class="navbar-header">
+            <!-- .navbar-toggle is used as the toggle for collapsed navbar content -->
+            
+            
+            <a class="navbar-brand" href="https://www.labtrac.com">
+                <span>Labtrac</span></a>
+            <ul class="list-inline pull-right visible-xs">
+               <li>
+                    <a class="navbar-toggle2" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+                        <span class="sr-only">Toggle navigation</span>
+                        <i class="fa fa-fw fa-bars" style=""></i> Menu
+                    </a>
+                </li>
+              {% include menu.html %}
+            </ul>
+        </div>
+         <div class="collapse navbar-collapse navbar-responsive-collapse">
+            <ul class="nav navbar-nav pull-right">
+              {% include menu.html %}
+            </ul>
+        </div>
+      </div>
+      </header> 
+    {% include breadcrumbs.html %}
+      <div id="main_content_wrap" class="outer">
+     <section id="main-content" class="inner">
      {{ content }}
      </section>
+   </div>
       <footer>
         <p>This project is maintained by <a href="https://github.com/labtrac">labtrac</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
-    </div>
-    <script src="javascripts/scale.fix.js"></script>
-    
+      </footer>    
   </body>
 </html>
