trying out toc approach

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,6 +46,7 @@
     {% include breadcrumbs.html %}
       <div id="main_content_wrap" class="outer">
      <section id="main-content" class="inner">
+       {% include left-menu.html %}
      {{ content }}
      </section>
    </div>
