fixing toc approach
Update left-menu.html

Update toc.md

Update left-menu.html

Update default.html

Create article.html

Update rough-guide.md

Update article.html

Update left-menu.html

Update toc.md

Update left-menu.html

Update default.html

Update default.html

--- a/_includes/left-menu.html
+++ b/_includes/left-menu.html
@@ -1,4 +1,6 @@
-    <div markdown="1">
-    	{% include toc.md %}
+    <div markdown="0">
+    	{% capture my-include %}{% include_relative toc.md %}{% endcapture %}
+        {{ my-include | markdownify }}
+
     </div>
 
