--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,18 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
    
-    {% if page.markdownpage == true %}
-    <link rel="stylesheet" type="text/css" media="screen" href="../stylesheets/stylesheet.css">
-    {% else %}
-     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-     {% endif %}
-     <link rel="stylesheet" type="text/css" media="screen" href="https://www.labtrac.com/content/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="https://www.labtrac.com/content/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="https://www.labtrac.com/content/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="https://www.labtrac.com/content/styles.css">
     <link rel="stylesheet" type="text/css" media="screen" href="https://www.labtrac.com/content/spacing.css">
 
     <title>{{page.title}}</title>
-  </head>
   </head>
   <body>
      <header class="navbar navbar-inverse navbar-fixed-top hidden-print" role="navigation">
@@ -33,7 +27,6 @@
                         <i class="fa fa-fw fa-bars" style=""></i> Menu
                     </a>
                 </li>
-              {% include menu.html %}
             </ul>
         </div>
          <div class="collapse navbar-collapse navbar-responsive-collapse">
@@ -44,15 +37,14 @@
       </div>
       </header> 
     {% include breadcrumbs.html %}
-      <div id="main_content_wrap" class="outer">
-     <section id="main-content" class="inner">
-       {% include left-menu.html %}
+      <div class="container">
      {{ content }}
-     </section>
-   </div>
+     </div>
       <footer>
         <p>This project is maintained by <a href="https://github.com/labtrac">labtrac</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>    
+      </footer>
+    <script src="https://www.labtrac.com/Scripts/jquery-2.1.3.min.js"></script>
+	<script src="https://www.labtrac.com/Scripts/bootstrap.min.js"></script>
   </body>
 </html>
