--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,8 +41,16 @@
      {{ content }}
      </div>
       <footer>
-        <p>This project is maintained by <a href="https://github.com/labtrac">labtrac</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <div class="container margin_bottom_30" style="min-height: 30px;">
+          <hr />
+          <nav class="pull-right">
+            <ul class="list-inline">
+                <li><a href="https://www.labtrac.com/en/Company">Contact Us</a></li>
+                <!--<li><a href="http://www.cirrux.com" target="_blank" title="Design by Cirrux">Design by Cirrux</a></li>-->
+            </ul>
+        </nav>
+        <p>© 2016 Labtrac Solutions Limited</p>
+    </div>
       </footer>
     <script src="https://www.labtrac.com/Scripts/jquery-2.1.3.min.js"></script>
 	<script src="https://www.labtrac.com/Scripts/bootstrap.min.js"></script>
