--- a/_includes/breadcrumbs.html
+++ b/_includes/breadcrumbs.html
@@ -12,7 +12,7 @@
 
     {% else %}
 
-        <span> // <span><a href="{{ site.url }}{{ site.baseurl }}{% assign crumb_limit = forloop.index | plus: 1 %}{% for crumb in crumbs limit: crumb_limit %}{{ crumb | append: '/' }}{% endfor %}">{{ crumb | replace:'-',' ' }} </a>
+        <span> // <span><a href="{{ site.url }}{{ site.baseurl }}{% assign crumb_limit = forloop.index | plus: 1 %}{% for crumb in crumbs limit: crumb_limit %}{{ crumb | append: '/' }}{% endfor %}">{{ crumb | replace:'-',' ' | capitalize }} </a>
     {% endif %}
 
   {% endfor %}
