--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,7 +1,10 @@
     <ul class="nav navbar-nav pull-right">
         {% for p in site.pages %}
+        {%if p.markdownpage == true %}
         <li>
         	<a {% if p.url == page.url %}class="active"{% endif %} href="{{ site.baseurl }}{{ p.url }}">{{ p.title }}</a>
         </li>
+        {% endif %}
         {% endfor %}
     </ul>
+ 
