--- a/_includes/left-menu.html
+++ b/_includes/left-menu.html
@@ -7,58 +7,58 @@
 <ul class="list-unstyled" id="contents">
 	<li>
 		<a data-toggle="collapse" class="collapsed" href="#welcome"><i class="fa fa-chevron-up fa-flip-vertical"></i></a>
-		<a href="/documentation">Welcome</a>
+		<a href="welcome">Welcome</a>
 		<ul id="welcome" class="collapse">
 			<li>
-				<a href="#0.1">Installing Labtrac</a>
+				<a href="welcome#0.1">Installing Labtrac</a>
 			</li>
 		</ul>
 	</li>
 	<li>
 		<a data-toggle="collapse" class="collapsed" href="#getsta"><i class="fa fa-chevron-up fa-flip-vertical"></i></a>
-		<a href="/documentation/getting-started">Getting Started</a>
+		<a href="getting-started">Getting Started</a>
 			<ul id="getsta" class="collapse">
-				<li><a href="#1.2">Data Build</a></li>
-				<li><a href="#1.4">Adding Dentists</a></li>
-				<li><a href="#1.5">Adding Products</a></li>
-				<li><a href="#1.6">Adding Materials</a></li>
-				<li><a href="#1.7">Adding a Job</a></li>
+				<li><a href="getting-started#1.2">Data Build</a></li>
+				<li><a href="getting-started#1.4">Adding Dentists</a></li>
+				<li><a href="getting-started#1.5">Adding Products</a></li>
+				<li><a href="getting-started#1.6">Adding Materials</a></li>
+				<li><a href="getting-started#1.7">Adding a Job</a></li>
 			</ul>
 	</li>
 	<li>
 		<a data-toggle="collapse" class="collapsed" href="#sysset"><i class="fa fa-chevron-up fa-flip-vertical"></i></a>
-		<a href="/documentation/system-settings">System Settings</a>
+		<a href="system-settings">System Settings</a>
 		<ul class="collapse" id="sysset">
-			<li><a href="#2.1">Lab Details</a></li>
-			<li><a href="#2.2">System Options</a></li>
-			<li><a href="2.3">Surgeon Defaults</a></li>
-			<li><a href="2.4">Financial</a></li>
-			<li><a href="2.5">Order Enclosures</a></li>
-			<li><a href="2.6">Footnotes</a></li>
-			<li><a href="2.7">User Manager</a></li>
+			<li><a href="system-settings#2.1">Lab Details</a></li>
+			<li><a href="system-settings#2.2">System Options</a></li>
+			<li><a href="system-settings#2.3">Surgeon Defaults</a></li>
+			<li><a href="system-settings#2.4">Financial</a></li>
+			<li><a href="system-settings#2.5">Order Enclosures</a></li>
+			<li><a href="system-settings#2.6">Footnotes</a></li>
+			<li><a href="system-settings#2.7">User Manager</a></li>
 		</ul>
 	</li>
 	<li>
 		<a data-toggle="collapse" class="collapsed" href="#invsta"><i class="fa fa-chevron-up fa-flip-vertical"></i></a>
-		<a href="/documentation/invoicing-statements">Invoicing and Statements</a>
+		<a href="invoicing-statements">Invoicing and Statements</a>
 		<ul id="invsta" class="collapse">
-			<li><a href="#3.1">Invoice List</a></li>
-			<li><a href="#3.2">Invoice Manager</a></li>
-			<li><a href="#3.3">Statement Manager</a></li>
-			<li><a href="#3.4">Account Activity</a></li>
-			<li><a href="#3.5">End of Month Guide</a></li>
-			<li><a href="#3.6">CRM Studio and Backup</a></li>
+			<li><a href="invoicing-statements#3.1">Invoice List</a></li>
+			<li><a href="invoicing-statements#3.2">Invoice Manager</a></li>
+			<li><a href="invoicing-statements#3.3">Statement Manager</a></li>
+			<li><a href="invoicing-statements#3.4">Account Activity</a></li>
+			<li><a href="invoicing-statements#3.5">End of Month Guide</a></li>
+			<li><a href="invoicing-statements#3.6">CRM Studio and Backup</a></li>
 		</ul>
 	</li>
 	<li>
 		<a data-toggle="collapse" class="collapsed" href="#payent"><i class="fa fa-chevron-up fa-flip-vertical"></i></a>
-		<a href="/documentation/payment-entry">Payment Entry</a>
+		<a href="payment-entry">Payment Entry</a>
 		<ul id="payent" class="collapse">
-			<li><a href="#4.1">Posting a Payment</a></li>
-			<li><a href="#4.2">Reversing a Payment</a></li>
+			<li><a href="payment-entry#4.1">Posting a Payment</a></li>
+			<li><a href="payment-entry#4.2">Reversing a Payment</a></li>
 		</ul>
 	</li>
-	<li><a href="/documentation/reports">Reports</a></li>
-	<li><a href="/documentation/financial-manager">Financial Manager</a></li>
-	<li><a href="/documentation/videos">All Videos</a></li>
+	<li><a href="reports">Reports</a></li>
+	<li><a href="financial-manager">Financial Manager</a></li>
+	<li><a href="videos">All Videos</a></li>
 </ul>
