--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="https://www.labtrac.com/content/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="https://www.labtrac.com/content/styles.css">
     <link rel="stylesheet" type="text/css" media="screen" href="https://www.labtrac.com/content/spacing.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="/stylesheets/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="../stylesheets/font-awesome.min.css">
 
     <title>{{page.title}}</title>
     <style>
