--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -7,9 +7,9 @@
         {% endfor %}
    -->
  
-<li><a href="/">About</a></li>
-<li><a href="/en/Home/Features#features">Features</a></li>
-<li><a href="/en/Pricing">Pricing</a></li>
+<li><a href="https://www.labtrac.com">About</a></li>
+<li><a href="https://www.labtrac.com/en/Home/Features#features">Features</a></li>
+<li><a href="https://www.labtrac.com/en/Pricing">Pricing</a></li>
 
 <li><a href="/en/Support">Support</a></li>
 <li class="hidden-xs">
