applied fixed layout, favicon, image links, welcome page/directory structure

--- a/_includes/left-menu.html
+++ b/_includes/left-menu.html
@@ -1,12 +1,12 @@
-
+<div class="fixer">
 <div id="header"></div>
 <ul class="list-unstyled" id="contents">
 	<li>
 		<a data-toggle="collapse" class="{% if page.title != "Welcome" %}collapsed{%endif%}" href="#welcome"><i class="fa fa-chevron-up fa-flip-vertical"></i></a>
-		<a href="welcome">Welcome</a>
+		<a href="../documentation">Welcome</a>
 		<ul id="welcome" class="collapse {% if page.title == "Welcome" %}in{% endif %}">
 			<li>
-				<a href="welcome#0.1">Installing Labtrac</a>
+				<a href="#0.1">Installing Labtrac</a>
 			</li>
 		</ul>
 	</li>
@@ -58,3 +58,4 @@
 	<li><a href="financial-manager">Financial Manager</a></li>
 	<li><a href="videos">All Videos</a></li>
 </ul>
+</div>
