fixed gap on small screens

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,7 +61,8 @@
 
       @media (max-width: 767px) {
     .fixer   {
-        position:static
+        position:static;
+        height: auto;
     }
     #contents a[data-toggle] {
       left:15px;
