--- a/_includes/left-menu.html
+++ b/_includes/left-menu.html
@@ -43,7 +43,8 @@
 			<li><a href="invoicing-statements#3.3">Statement Manager</a></li>
 			<li><a href="invoicing-statements#3.4">Account Activity</a></li>
 			<li><a href="invoicing-statements#3.5">End of Month Guide</a></li>
-			<li><a href="invoicing-statements#3.6">CRM Studio and Backup</a></li>
+			<li><a href="invoicing-statements#3.6">CRM Studio and MyDentist Invoicing</a></li>
+			<li><a href="invoicing-statements#3.7">Backup Module</a></li>
 		</ul>
 	</li>
 	<li>
