--- a/_includes/left-menu.html
+++ b/_includes/left-menu.html
@@ -56,7 +56,7 @@
 		</ul>
 	</li>
 	<li><a href="reports">Reports</a></li>
-	<li><a href="financial-manager">Financial Manager</a></li>
+	<li><a href="financial-manager">Financial Manager</a>NOPRINT</li>
 	<li><a href="videos">All Videos</a></li>
 </ul>
 </div>
