--- a/_includes/left-menu.html
+++ b/_includes/left-menu.html
@@ -55,6 +55,14 @@
 			<li><a href="payment-entry#4.2">Reversing a Payment</a></li>
 		</ul>
 	</li>
+		<li>
+		<a data-toggle="collapse" class="{% if page.title != "Pricing Wizards" %}collapsed{%endif%}" href="#payent"><i class="fa fa-chevron-up fa-flip-vertical"></i></a>
+		<a href="pricing-wizards">Pricing Wizards</a>
+		<ul id="payent" class="collapse {% if page.title == "Pricing Wizards" %}in{%endif%}">
+			<li><a href="product-pricing-wizard#10.1">Posting a Payment</a></li>
+			<li><a href="material-pricing-wizard#10.2">Reversing a Payment</a></li>
+		</ul>
+	</li>
 	<li><a href="reports">Reports</a></li>
 	<li><a href="videos">Videos</a></li>
 </ul>
