--- a/_includes/left-menu.html
+++ b/_includes/left-menu.html
@@ -59,8 +59,8 @@
 		<a data-toggle="collapse" class="{% if page.title != "Pricing Wizards" %}collapsed{%endif%}" href="#payent"><i class="fa fa-chevron-up fa-flip-vertical"></i></a>
 		<a href="pricing-wizards">Pricing Wizards</a>
 		<ul id="payent" class="collapse {% if page.title == "Pricing Wizards" %}in{%endif%}">
-			<li><a href="product-pricing-wizard#10.1">Posting a Payment</a></li>
-			<li><a href="material-pricing-wizard#10.2">Reversing a Payment</a></li>
+			<li><a href="product-pricing-wizard#10.1">Product Pricing Wizard</a></li>
+			<li><a href="material-pricing-wizard#10.2">Material Pricing Wizard</a></li>
 		</ul>
 	</li>
 	<li><a href="reports">Reports</a></li>
