--- a/_includes/left-menu.html
+++ b/_includes/left-menu.html
@@ -56,7 +56,7 @@
 		</ul>
 	</li>
 		<li>
-		<a data-toggle="collapse" class="{% if page.title != "Pricing Wizards" %}collapsed{%endif%}" href="#payent"><i class="fa fa-chevron-up fa-flip-vertical"></i></a>
+		<a data-toggle="collapse" class="{% if page.title != "Pricing Wizards" %}collapsed{%endif%}" href="#priwiz"><i class="fa fa-chevron-up fa-flip-vertical"></i></a>
 		<a href="pricing-wizards">Pricing Wizards</a>
 		<ul id="payent" class="collapse {% if page.title == "Pricing Wizards" %}in{%endif%}">
 			<li><a href="product-pricing-wizard#10.1">Product Pricing Wizard</a></li>
