--- a/_includes/left-menu.html
+++ b/_includes/left-menu.html
@@ -47,14 +47,7 @@
 			<li><a href="invoicing-statements#3.7">Backup Module</a></li>
 		</ul>
 	</li>
-	<li>
-		<a data-toggle="collapse" class="{% if page.title != "Payment Entry" %}collapsed{%endif%}" href="#payent"><i class="fa fa-chevron-up fa-flip-vertical"></i></a>
-		<a href="payment-entry">Payment Entry</a>
-		<ul id="payent" class="collapse {% if page.title == "Payment Entry" %}in{%endif%}">
-			<li><a href="payment-entry#4.1">Posting a Payment</a></li>
-			<li><a href="payment-entry#4.2">Reversing a Payment</a></li>
-		</ul>
-	</li>
+
 		<li>
 		<a data-toggle="collapse" class="{% if page.title != "Pricing Wizards" %}collapsed{%endif%}" href="#priwiz"><i class="fa fa-chevron-up fa-flip-vertical"></i></a>
 		<a href="pricing-wizards">Pricing Wizards</a>
@@ -63,6 +56,7 @@
 			<li><a href="material-pricing-wizard#10.2">Material Pricing Wizard</a></li>
 		</ul>
 	</li>
+	<li><a href="pricing-wizards">Pricing Wizards</a></li>
 	<li><a href="reports">Reports</a></li>
 	<li><a href="videos">Videos</a></li>
 </ul>
