--- a/_includes/left-menu.html
+++ b/_includes/left-menu.html
@@ -49,11 +49,11 @@
 	</li>
 
 		<li>
-		<a data-toggle="collapse" class="{% if page.title != "Pricing Wizards" %}collapsed{%endif%}" href="#priwiz"><i class="fa fa-chevron-up fa-flip-vertical"></i></a>
-		<a href="pricing-wizards">Pricing Wizards</a>
-		<ul id="payent" class="collapse {% if page.title == "Pricing Wizards" %}in{%endif%}">
-			<li><a href="product-pricing-wizard#10.1">Product Pricing Wizard</a></li>
-			<li><a href="material-pricing-wizard#10.2">Material Pricing Wizard</a></li>
+		<a data-toggle="collapse" class="{% if page.title != "Payment Entry" %}collapsed{%endif%}" href="#payent"><i class="fa fa-chevron-up fa-flip-vertical"></i></a>
+		<a href="payment-entry">Payment Entry</a>
+		<ul id="payent" class="collapse {% if page.title == "Payment Entry" %}in{%endif%}">
+			<li><a href="entering-payments#4.1">Product Pricing Wizard</a></li>
+			<li><a href="reversing-payments#4.2">Material Pricing Wizard</a></li>
 		</ul>
 	</li>
 	<li><a href="pricing-wizards">Pricing Wizards</a></li>
