--- a/_includes/left-menu.html
+++ b/_includes/left-menu.html
@@ -52,8 +52,18 @@
 		<a data-toggle="collapse" class="{% if page.title != "Payment Entry" %}collapsed{%endif%}" href="#payent"><i class="fa fa-chevron-up fa-flip-vertical"></i></a>
 		<a href="payment-entry">Payment Entry</a>
 		<ul id="payent" class="collapse {% if page.title == "Payment Entry" %}in{%endif%}">
-			<li><a href="entering-payments#4.1">Product Pricing Wizard</a></li>
-			<li><a href="reversing-payments#4.2">Material Pricing Wizard</a></li>
+			<li><a href="payment-entry#4.1">Entering a Payment</a></li>
+			<li><a href="payment-entry#4.2">Reversing a Payment</a></li>
+		</ul>
+	</li>
+	</li>
+
+		<li>
+		<a data-toggle="collapse" class="{% if page.title != "Pricing Wizards" %}collapsed{%endif%}" href="#priwiz"><i class="fa fa-chevron-up fa-flip-vertical"></i></a>
+		<a href="pricing-wizards">Pricing Wizardsy</a>
+		<ul id="priwiz" class="collapse {% if page.title == "Pricing Wizards" %}in{%endif%}">
+			<li><a href="pricing-wizards#10.1">Product Pricing Wizard</a></li>
+			<li><a href="pricing-wizards#10.2">Material Pricing Wizard</a></li>
 		</ul>
 	</li>
 	<li><a href="pricing-wizards">Pricing Wizards</a></li>
