--- a/_includes/left-menu.html
+++ b/_includes/left-menu.html
@@ -10,7 +10,11 @@
 			</li>
 		</ul>
 	</li>
+	
+	<li><a href="newfeatures">Whats New in Labtrac?</a></li>
+	
 	<li>
+	
 		<a data-toggle="collapse" class="{% if page.title != "Getting Started" %}collapsed{%endif%}" href="#getsta"><i class="fa fa-chevron-up fa-flip-vertical"></i></a>
 		<a href="getting-started">Getting Started</a>
 			<ul id="getsta" class="collapse{% if page.title == "Getting Started" %}in{%endif%}">
