--- a/_includes/left-menu.html
+++ b/_includes/left-menu.html
@@ -11,7 +11,7 @@
 		</ul>
 	</li>
 	
-	<li><a href="newfeatures">Whats New in Labtrac?</a></li>
+	<li><a href="new-features">Whats New in Labtrac?</a></li>
 	
 	<li>
 	
