--- a/_includes/left-menu.html
+++ b/_includes/left-menu.html
@@ -65,5 +65,6 @@
 	<li><a href="pricing-wizards">Pricing Wizards</a></li>
 	<li><a href="reports">Reports</a></li>
 	<li><a href="videos">Videos</a></li>
+	<li><a href="faqs">Frequently Asked Questions</a></li>
 </ul>
 </div>
