--- a/_includes/left-menu.html
+++ b/_includes/left-menu.html
@@ -39,7 +39,7 @@
 		</ul>
 	</li>
 	<li>
-		<a data-toggle="collapse" class="{% if page.title != "Invoicing and Statements" %}collapsed{%endif%}" href="#invsta"><i class="fa fa-chevron-up fa-flip-vertical"></i></a>
+		<a data-toggle="collapse" class="{% if page.title != "Invoicing and Statements" %}collapse{%endif%}" href="#invsta"><i class="fa fa-chevron-up fa-flip-vertical"></i></a>
 		<a href="invoicing-statements">Invoicing and Statements</a>
 		<ul id="invsta" class="collapse {% if page.title == "Invoicing and Statements" %}in{%endif%}">
 			<li><a href="invoicing-statements#3.1">Invoice List</a></li>
