--- a/_includes/left-menu.html
+++ b/_includes/left-menu.html
@@ -62,6 +62,7 @@
 	</li>
 	</li>
 
+	<li><a href="online">Online</a></li>
 	<li><a href="pricing-wizards">Pricing Wizards</a></li>
 	<li><a href="reports">Reports</a></li>
 	<li><a href="videos">Videos</a></li>
