--- a/_includes/left-menu.html
+++ b/_includes/left-menu.html
@@ -26,8 +26,7 @@
 			</ul>
 	</li>
 	<li>
-		<a data-toggle="collapse" class="{% if page.title != "System Settings" %}collapsed{%endif%}" href="#sysset"><i class="fa fa-chevron-up fa-flip-vertical"></i></a>
-		<a href="system-settings">System Settings</a>
+		
 		<ul class="collapse {% if page.title == "System Settings" %}in{%endif%}" id="sysset">
 			<li><a href="system-settings#2.1">Lab Details</a></li>
 			<li><a href="system-settings#2.2">System Options</a></li>
@@ -38,8 +37,12 @@
 			<li><a href="system-settings#2.7">User Manager</a></li>
 		</ul>
 	</li>
+	
+	<<a data-toggle="collapse" class="{% if page.title != "System Settings" %}collapsed{%endif%}" href="#sysset"><i class="fa fa-chevron-up fa-flip-vertical"></i></a>
+		<a href="system-settings">System Settings</a>>
+	
 	<li>
-		<a data-toggle="collapse" class="{% if page.title != "Invoicing and Statements" %}collapse{%endif%}" href="#invsta"><i class="fa fa-chevron-up fa-flip-vertical"></i></a>
+		<a data-toggle="collapse" class="{% if page.title != "Invoicing and Statements" %}collapsed{%endif%}" href="#invsta"><i class="fa fa-chevron-up fa-flip-vertical"></i></a>
 		<a href="invoicing-statements">Invoicing and Statements</a>
 		<ul id="invsta" class="collapse {% if page.title == "Invoicing and Statements" %}in{%endif%}">
 			<li><a href="invoicing-statements#3.1">Invoice List</a></li>
