--- a/_includes/left-menu.html
+++ b/_includes/left-menu.html
@@ -26,7 +26,8 @@
 			</ul>
 	</li>
 	<li>
-		
+		<a data-toggle="collapse" class="{% if page.title != "System Settings" %}collapsed{%endif%}" href="#sysset"><i class="fa fa-chevron-up fa-flip-vertical"></i></a>
+		<a href="system-settings">System Settings</a>
 		<ul class="collapse {% if page.title == "System Settings" %}in{%endif%}" id="sysset">
 			<li><a href="system-settings#2.1">Lab Details</a></li>
 			<li><a href="system-settings#2.2">System Options</a></li>
@@ -37,9 +38,6 @@
 			<li><a href="system-settings#2.7">User Manager</a></li>
 		</ul>
 	</li>
-	
-	<<a data-toggle="collapse" class="{% if page.title != "System Settings" %}collapsed{%endif%}" href="#sysset"><i class="fa fa-chevron-up fa-flip-vertical"></i></a>
-		<a href="system-settings">System Settings</a>>
 	
 	<li>
 		<a data-toggle="collapse" class="{% if page.title != "Invoicing and Statements" %}collapsed{%endif%}" href="#invsta"><i class="fa fa-chevron-up fa-flip-vertical"></i></a>
