--- a/_includes/left-menu.html
+++ b/_includes/left-menu.html
@@ -15,6 +15,17 @@
 	
 	<li>
 	
+	<li><a href="getting-started"><Getting Started</a>
+				<li><a href="getting-started#1.2">Data Build</a></li>
+				<li><a href="getting-started#1.4">Adding Dentists</a></li>
+				<li><a href="getting-started#1.5">Adding Products</a></li>
+				<li><a href="getting-started#1.6">Adding Materials</a></li>
+				<li><a href="getting-started#1.7">Adding a Job</a></li>
+			</ul>
+	</li>
+	
+	<li>
+	
 		<a data-toggle="collapse" class="{% if page.title != "Getting Started" %}collapsed{%endif%}" href="#getsta"><i class="fa fa-chevron-up fa-flip-vertical"></i></a>
 		<a href="getting-started">Getting Started</a>
 			<ul id="getsta" class="collapse{% if page.title == "Getting Started" %}in{%endif%}">
@@ -25,6 +36,7 @@
 				<li><a href="getting-started#1.7">Adding a Job</a></li>
 			</ul>
 	</li>
+	
 	<li>
 		<a data-toggle="collapse" class="{% if page.title != "System Settings" %}collapsed{%endif%}" href="#sysset"><i class="fa fa-chevron-up fa-flip-vertical"></i></a>
 		<a href="system-settings">System Settings</a>
