--- a/_includes/left-menu.html
+++ b/_includes/left-menu.html
@@ -15,7 +15,7 @@
 	
 	<li>
 	
-		<a data-toggle="collapse" class="{% if page.title != "Setup" %}collapsed{%endif%}" href="#setup"><i class="fa fa-chevron-up fa-flip-vertical"></i></a>
+		<a data-toggle="collapse" class="{% if page.title != "Setup" %}collapsed{%endif%}" href="#set"><i class="fa fa-chevron-up fa-flip-vertical"></i></a>
 		<a href="setup">Getting Started</a>
 			<ul id="getsta" class="collapse{% if page.title == "Getting Started" %}in{%endif%}">
 				<li><a href="setup#1.2">Getting Started</a></li>
