--- a/_includes/left-menu.html
+++ b/_includes/left-menu.html
@@ -15,14 +15,14 @@
 	
 	<li>
 	
-		<a data-toggle="collapse" class="{% if page.title != "Setup" %}collapsed{%endif%}" href="#set"><i class="fa fa-chevron-up fa-flip-vertical"></i></a>
-		<a href="setup">Getting Started</a>
+		<a data-toggle="collapse" class="{% if page.title != "Setup" %}collapsed{%endif%}" href="#setnew"><i class="fa fa-chevron-up fa-flip-vertical"></i></a>
+		<a href="setup-new">Setup</a>
 			<ul id="getsta" class="collapse{% if page.title == "Getting Started" %}in{%endif%}">
-				<li><a href="setup#1.2">Getting Started</a></li>
-				<li><a href="setup#1.4">Adding Dentists</a></li>
-				<li><a href="setup#1.5">Adding Products</a></li>
-				<li><a href="setup#1.6">Adding Materials</a></li>
-				<li><a href="setup#1.7">Adding a Job</a></li>
+				<li><a href="setup-new#1.2">Getting Started</a></li>
+				<li><a href="setup-new#1.4">Adding Dentists</a></li>
+				<li><a href="setup-new#1.5">Adding Products</a></li>
+				<li><a href="setup-new#1.6">Adding Materials</a></li>
+				<li><a href="setup-new#1.7">Adding a Job</a></li>
 			</ul>
 	</li>
 	
