--- a/_includes/left-menu.html
+++ b/_includes/left-menu.html
@@ -17,7 +17,7 @@
 	
 		<a data-toggle="collapse" class="{% if page.title != "Setup" %}collapsed{%endif%}" href="#setnew"><i class="fa fa-chevron-up fa-flip-vertical"></i></a>
 		<a href="setup-new">Setup</a>
-			<ul id="getsta" class="collapse{% if page.title == "Getting Started" %}in{%endif%}">
+		<ul id="setnew" class="collapse{% if page.title == "Getting Started" %}in{%endif%}">
 				<li><a href="setup-new#1.2">Getting Started</a></li>
 				<li><a href="setup-new#1.4">Adding Dentists</a></li>
 				<li><a href="setup-new#1.5">Adding Products</a></li>
