--- a/_includes/left-menu.html
+++ b/_includes/left-menu.html
@@ -37,6 +37,7 @@
 			<li><a href="system-settings#2.5">Order Enclosures</a></li>
 			<li><a href="system-settings#2.6">Footnotes</a></li>
 			<li><a href="system-settings#2.7">User Manager</a></li>
+			<li><a href="system-settings#2.8">Diary</a></li>
 		</ul>
 	</li>
 	
