--- a/_includes/left-menu.html
+++ b/_includes/left-menu.html
@@ -18,11 +18,11 @@
 		<a data-toggle="collapse" class="{% if page.title != "Setup" %}collapsed{%endif%}" href="#setnew"><i class="fa fa-chevron-up fa-flip-vertical"></i></a>
 		<a href="setup-new">Setup</a>
 		<ul id="setnew" class="collapse{% if page.title == "Getting Started" %}in{%endif%}">
-				<li><a href="setup-new#1.2">Getting Started</a></li>
-				<li><a href="setup-new#1.4">Adding Dentists</a></li>
-				<li><a href="setup-new#1.5">Adding Products</a></li>
-				<li><a href="setup-new#1.6">Adding Materials</a></li>
-				<li><a href="setup-new#1.7">Adding a Job</a></li>
+				<li><a href="setup-new#gettingstarted">Getting Started</a></li>
+				<li><a href="setup-new#addingdentists">Adding Dentists</a></li>
+				<li><a href="setup-new#addingproducts">Adding Products</a></li>
+				<li><a href="setup-new#addingmaterials">Adding Materials</a></li>
+				<li><a href="setup-new#addingjobs">Adding a Job</a></li>
 			</ul>
 	</li>
 	
