--- a/_includes/left-menu.html
+++ b/_includes/left-menu.html
@@ -30,14 +30,14 @@
 		<a data-toggle="collapse" class="{% if page.title != "System Settings" %}collapsed{%endif%}" href="#sysset"><i class="fa fa-chevron-up fa-flip-vertical"></i></a>
 		<a href="system-settings">System Settings</a>
 		<ul class="collapse {% if page.title == "System Settings" %}in{%endif%}" id="sysset">
-			<li><a href="system-settings#2.1">Lab Details</a></li>
-			<li><a href="system-settings#2.2">System Options</a></li>
-			<li><a href="system-settings#2.3">Dentist Defaults</a></li>
-			<li><a href="system-settings#2.4">Financial</a></li>
-			<li><a href="system-settings#2.5">Order Enclosures</a></li>
-			<li><a href="system-settings#2.6">Footnotes</a></li>
-			<li><a href="system-settings#2.7">User Manager</a></li>
-			<li><a href="system-settings#2.8">Diary</a></li>
+			<li><a href="system-settings#labdetails">Lab Details</a></li>
+			<li><a href="system-settings#systemoptions">System Options</a></li>
+			<li><a href="system-settings#dentist">Dentist Defaults</a></li>
+			<li><a href="system-settings#financial">Financial</a></li>
+			<li><a href="system-settings#orderenclosures">Order Enclosures</a></li>
+			<li><a href="system-settings#footnotes">Footnotes</a></li>
+			<li><a href="system-settings#usermanager">User Manager</a></li>
+			<li><a href="system-settings#diary">Diary</a></li>
 		</ul>
 	</li>
 	
