--- a/_includes/left-menu.html
+++ b/_includes/left-menu.html
@@ -45,14 +45,14 @@
 		<a data-toggle="collapse" class="{% if page.title != "Invoicing and Statements" %}collapsed{%endif%}" href="#invsta"><i class="fa fa-chevron-up fa-flip-vertical"></i></a>
 		<a href="invoicing-statements">Invoicing and Statements</a>
 		<ul id="invsta" class="collapse {% if page.title == "Invoicing and Statements" %}in{%endif%}">
-			<li><a href="invoicing-statements#3.1">Invoice List</a></li>
-			<li><a href="invoicing-statements#3.2">Invoice Manager</a></li>
-			<li><a href="invoicing-statements#3.3">Statement Manager</a></li>
-			<li><a href="invoicing-statements#3.4">Account Activity</a></li>
-			<li><a href="invoicing-statements#3.5">End of Month Guide</a></li>
-			<li><a href="invoicing-statements#3.6">CRM Studio and MyDentist Invoicing</a></li>
-			<li><a href="invoicing-statements#3.65">Invoice Export</a></li>
-			<li><a href="invoicing-statements#3.7">Backup Module</a></li>
+			<li><a href="invoicing-statements#invoicelist">Invoice List</a></li>
+			<li><a href="invoicing-statements#invoicemanager">Invoice Manager</a></li>
+			<li><a href="invoicing-statements#statementmanager">Statement Manager</a></li>
+			<li><a href="invoicing-statements#accountactivity">Account Activity</a></li>
+			<li><a href="invoicing-statements#endofmonth">End of Month Guide</a></li>
+			<li><a href="invoicing-statements#crm">CRM Studio and MyDentist Invoicing</a></li>
+			<li><a href="invoicing-statements#invoiceexport">Invoice Export</a></li>
+			<li><a href="invoicing-statements#backup">Backup Module</a></li>
 		</ul>
 	</li>
 
