--- a/_includes/left-menu.html
+++ b/_includes/left-menu.html
@@ -6,7 +6,7 @@
 		<a href="../documentation">Welcome</a>
 		<ul id="welcome" class="collapse {% if page.title == "Welcome" %}in{% endif %}">
 			<li>
-				<a href="#0.1">Installing Labtrac</a>
+				<a href="#install">Installing Labtrac</a>
 			</li>
 		</ul>
 	</li>
@@ -60,8 +60,8 @@
 		<a data-toggle="collapse" class="{% if page.title != "Payment Entry" %}collapsed{%endif%}" href="#payent"><i class="fa fa-chevron-up fa-flip-vertical"></i></a>
 		<a href="payment-entry">Payment Entry</a>
 		<ul id="payent" class="collapse {% if page.title == "Payment Entry" %}in{%endif%}">
-			<li><a href="payment-entry#4.1">Entering a Payment</a></li>
-			<li><a href="payment-entry#4.2">Reversing a Payment</a></li>
+			<li><a href="payment-entry#paymententry">Entering a Payment</a></li>
+			<li><a href="payment-entry#reversepayment">Reversing a Payment</a></li>
 		</ul>
 	</li>
 	</li>
