--- a/_includes/left-menu.html
+++ b/_includes/left-menu.html
@@ -15,14 +15,14 @@
 	
 	<li>
 	
-		<a data-toggle="collapse" class="{% if page.title != "Setup" %}collapsed{%endif%}" href="#setnew"><i class="fa fa-chevron-up fa-flip-vertical"></i></a>
-		<a href="setup-new">Setup</a>
-		<ul id="setnew" class="collapse{% if page.title == "Getting Started" %}in{%endif%}">
-				<li><a href="setup-new#gettingstarted">Getting Started</a></li>
-				<li><a href="setup-new#addingdentists">Adding Dentists</a></li>
-				<li><a href="setup-new#addingproducts">Adding Products</a></li>
-				<li><a href="setup-new#addingmaterials">Adding Materials</a></li>
-				<li><a href="setup-new#addingjobs">Adding a Job</a></li>
+		<a data-toggle="collapse" class="{% if page.title != "Setup" %}collapsed{%endif%}" href="#set"><i class="fa fa-chevron-up fa-flip-vertical"></i></a>
+		<a href="setup">Setup</a>
+		<ul id="set" class="collapse{% if page.title == "Getting Started" %}in{%endif%}">
+				<li><a href="setup#gettingstarted">Getting Started</a></li>
+				<li><a href="setup#addingdentists">Adding Dentists</a></li>
+				<li><a href="setup#addingproducts">Adding Products</a></li>
+				<li><a href="setup#addingmaterials">Adding Materials</a></li>
+				<li><a href="setup#addingjobs">Adding a Job</a></li>
 			</ul>
 	</li>
 	
